--- a/AddressApp-Part-1/src/ch/makery/address/view/Inner.fxml
+++ b/AddressApp-Part-1/src/ch/makery/address/view/Inner.fxml
@@ -6,17 +6,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.view.InnerOverviewController">
+<AnchorPane minHeight="500.0" minWidth="868.0" prefHeight="500.0" prefWidth="868.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.view.InnerOverviewController">
    <children>
-      <SplitPane dividerPositions="0.8407572383073497" layoutX="153.0" layoutY="70.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.8418708240534521" layoutX="153.0" layoutY="70.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="868.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <SplitPane dividerPositions="0.8863636363636364" layoutX="183.0" layoutY="49.0" orientation="VERTICAL" prefHeight="398.0" prefWidth="659.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <SplitPane dividerPositions="0.8700787401574803" layoutX="183.0" layoutY="49.0" orientation="VERTICAL" prefHeight="498.0" prefWidth="725.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <ScrollPane layoutX="7.0" layoutY="13.0" prefHeight="437.0" prefViewportHeight="247.0" prefViewportWidth="491.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="7.0" layoutY="13.0" prefViewportHeight="247.0" prefViewportWidth="491.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
                                     <TableView fx:id="musicTable" layoutX="24.0" layoutY="-50.0" prefHeight="435.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
@@ -35,8 +35,8 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <TextField layoutX="77.0" layoutY="12.0" prefHeight="18.0" prefWidth="478.0" />
-                              <Button layoutX="628.0" layoutY="12.0" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" text="Add" />
+                              <TextField fx:id="bottomField" layoutX="77.0" layoutY="12.0" prefHeight="18.0" prefWidth="478.0" />
+                              <Button fx:id="add" layoutX="604.0" layoutY="12.0" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" text="Add" />
                            </children>
                         </AnchorPane>
                     </items>
@@ -46,8 +46,9 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <TextField fx:id="filterField" layoutX="7.0" layoutY="9.0" prefHeight="25.0" prefWidth="124.0" />
-                  <Button layoutX="41.0" layoutY="218.0" minWidth="-Infinity" mnemonicParsing="false" text="Remove" />
-                  <Button layoutX="41.0" layoutY="43.0" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" text="Search" />
+                  <Button fx:id="remove" layoutX="38.0" layoutY="226.0" minWidth="-Infinity" mnemonicParsing="false" text="Remove" />
+                  <Label layoutX="24.0" layoutY="44.0" text="Linear Search" />
+                  <Label fx:id="timer" layoutX="24.0" layoutY="67.0" text="Label" />
                </children>
             </AnchorPane>
         </items>
