--- a/AddressApp-Part-1/src/ch/makery/address/view/Inner.fxml
+++ b/AddressApp-Part-1/src/ch/makery/address/view/Inner.fxml
@@ -18,7 +18,7 @@
                            <children>
                               <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="7.0" layoutY="13.0" prefViewportHeight="247.0" prefViewportWidth="491.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
-                                    <TableView fx:id="musicTable" layoutX="24.0" layoutY="-50.0" prefHeight="435.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <TableView fx:id="musicTable" editable="true" layoutX="24.0" layoutY="-50.0" prefHeight="435.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
                                         <TableColumn fx:id="artistColumn" prefWidth="75.0" text="Artist" />
                                         <TableColumn fx:id="songColumn" prefWidth="75.0" text="Song" />
@@ -35,7 +35,7 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <TextField fx:id="bottomField" layoutX="77.0" layoutY="12.0" prefHeight="18.0" prefWidth="478.0" />
+                              <TextField fx:id="bottomField" layoutX="77.0" layoutY="12.0" prefHeight="18.0" prefWidth="478.0" promptText="Add in csv form ( arist , song, year , combined )" />
                               <Button fx:id="add" layoutX="604.0" layoutY="12.0" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="59.0" text="Add" />
                            </children>
                         </AnchorPane>
@@ -45,10 +45,13 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TextField fx:id="filterField" layoutX="7.0" layoutY="9.0" prefHeight="25.0" prefWidth="124.0" />
-                  <Button fx:id="remove" layoutX="38.0" layoutY="226.0" minWidth="-Infinity" mnemonicParsing="false" text="Remove" />
+                  <TextField fx:id="filterField" layoutX="7.0" layoutY="9.0" prefHeight="25.0" prefWidth="124.0" promptText="Search" />
+                  <Button fx:id="remove" layoutX="30.0" layoutY="211.0" minWidth="-Infinity" mnemonicParsing="false" text="Remove" />
                   <Label layoutX="24.0" layoutY="44.0" text="Linear Search" />
-                  <Label fx:id="timer" layoutX="24.0" layoutY="67.0" text="Label" />
+                  <Label fx:id="timer" layoutX="24.0" layoutY="67.0" text="Time :" />
+                  <Button fx:id="bubbleSortYear" layoutX="23.0" layoutY="382.0" mnemonicParsing="false" text="BubbleSort" />
+                  <Label fx:id="bubbleTimer" layoutX="12.0" layoutY="413.0" text="BubbleSort Time:" />
+                  <Label layoutX="11.0" layoutY="359.0" text="Year Sorts:" />
                </children>
             </AnchorPane>
         </items>
